[package]
name = "defined"
version = "0.2.0"
edition = "2021"
description = "A simpler Option type to circumvent orphan rules in sea-orm."
license = "MIT OR Apache-2.0"
repository = "https://github.com/franklx/defined"
documentation = "https://docs.rs/defined/latest/defined/"

[features]
default = ["serde", "sea-query"]
serde = ["dep:serde"]
sea-query = ["dep:sea-query"]

[dependencies]
serde = { version = "1", optional = true }
sea-query = { version = "0.30", optional = true }
